--- a/tex/main.tex
+++ b/tex/main.tex
@@ -922,7 +922,7 @@ Entonces el algoritmo aquí propuesto para determinar el número óptimo de vago
 
 
 \begin{align}
-N_{\text{vagones}} = \left\lceil\dfrac{\theta^*}{n_{\text{plazas}}}\right\rceil \, \mid \, \theta^* \, \mid \, \delta(\theta^*) > \delta(\theta) \,\, \& \,\, 1 - \underset{(\overline{\mu}_n , \, \overline{\sigma}_n)}{P(\theta^*)} > \dfrac{1}{2}
+N_{\text{vagones}} = \left\lceil\dfrac{\theta^*}{n_{\text{plazas}}}\right\rceil \, \mid \, \theta^* \, \mid \, \max\left(\delta(\theta^*)\right) > \epsilon\left(\delta(\theta)\right) \,\mid \, 1 - \underset{(\overline{\mu}_n , \, \overline{\sigma}_n)}{P(\theta^*)} > \dfrac{1}{2}
 \end{align}
 
 
